<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/searchFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.tripexplorer.ui.SearchFragment"
        android:label="@string/nav_search">
        <action
            android:id="@+id/action_searchFragment_to_resultsFragment"
            app:destination="@id/resultsFragment" />
    </fragment>

    <fragment
        android:id="@+id/resultsFragment"
        android:name="com.example.tripexplorer.ui.ResultsFragment"
        android:label="@string/nav_results">
        <action
            android:id="@+id/action_resultsFragment_to_placeDetailsFragment"
            app:destination="@id/placeDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/placeDetailsFragment"
        android:name="com.example.tripexplorer.ui.PlaceDetailsFragment"
        android:label="@string/nav_place_details">
        <argument
            android:name="xid"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.tripexplorer.ui.FavoritesFragment"
        android:label="@string/nav_favorites">
        <action
            android:id="@+id/action_favoritesFragment_to_placeDetailsFragment"
            app:destination="@id/placeDetailsFragment" />
        <action
            android:id="@+id/action_favoritesFragment_to_editNoteFragment"
            app:destination="@id/editNoteFragment" />
    </fragment>

    <fragment
        android:id="@+id/editNoteFragment"
        android:name="com.example.tripexplorer.ui.EditNoteFragment"
        android:label="@string/nav_edit_note">
        <argument
            android:name="xid"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.tripexplorer.ui.SettingsFragment"
        android:label="@string/nav_settings" />

</navigation>
